--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     font-family: 'Signika Negative', sans-serif;
 }
@@ -41,9 +46,23 @@ h3{
     background-color: #ccc;
     box-shadow: 10px 10px 30px black;
 }
-
-
-
-
-
-
+.headers{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: rgb(76, 0, 255);
+}
+.header_link{
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    transition: 0.9s;
+}
+.header_link:hover{
+    color: rgb(0, 0, 0);
+    box-shadow: 10px 10px 30px rgb(0, 0, 0);
+    
+}
