--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ h1{
     font-size: 18px;
 }
 .cat{
-    position: absolute;
+   display: block;
+   margin: 0 auto;
     left: 40%;
     width: 300px;
-    transition: 6.5s;
+    transition: 30.9s;
 }
 .cat:hover{
     transform: scale(2);
@@ -64,5 +65,37 @@ h3{
 .header_link:hover{
     color: rgb(0, 0, 0);
     box-shadow: 10px 10px 30px rgb(0, 0, 0);
-    
+}
+.net{
+    color: rgba(16, 163, 82, 0.562);
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+.pepa{
+    color: black;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.water{
+    display: block;
+   margin: 0 auto;
+    left: 40%;
+    width: 300px;
+    transition: 30.9s;
+}
+.water:hover{
+    transform: scale(2);
+}
+.ter{
+    color: rgba(16, 163, 82, 0.562);
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+.ghoul{
+    color: black;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
